# searxng-bm25-reranker

./: .gitignore  README.md  README_en.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/: Dockerfile
src/searxng_bm25_reranker/: __init__.py  _tokenizer.py
src/searxng_bm25_reranker/_vendor/: sparse_search.py
