[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-bm25-reranker"
dynamic = ["version"]
description = "BM25 reranking plugin for SearXNG using zero-dependency sparse search"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Peng Ding", email = "pding.dp@foxmail.com" }]
dependencies = []

[project.urls]
Repository = "https://github.com/Oaklight/searxng-bm25-reranker"

[tool.setuptools.dynamic]
version = { attr = "searxng_bm25_reranker.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
